모서리에 충돌 시 공의 경로가 잘 바뀌게 하였습니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -138,7 +138,7 @@
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Objects.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Draw.h" />
