--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Objects.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CollisionManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h">
