BinaryTree를 짰습니다. MyDataType header only file을 만들어서 피룡한 데이터 구조는 전부 여기에 몰아 넣기로 했습니다. 현재 Refactoring 중입니다. Draw에서 GameObject header를 쓰지 못하게 하였고, 그 대신 BinaryTree vector를 static 전역 변수로 선언하여 놓았습니다. 짧은 함수들은 inline화 하였습니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="draw.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Objects.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CollisionManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -39,6 +36,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Draw.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MyDataType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
