--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -139,11 +139,11 @@
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Objects.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="MyDataType.h" />
     <ClInclude Include="Objects.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
