1. Circle에서 Oval로 이름을 바꾸었습니다.(Circle을 Oval의 특수한 형태로 봄) 2. CommonBetweenGameAndDraw 헤더 파일을 추가하여 둘 사이에 연결고리 역할을 하게 했습니다. 3. Object Tree와 CollisionObject를 구분하였습니다. 4. MyDataType의 Tree와 Node의 Type을 일부 손 보았습니다. 5. Triangle Class를 Object.h에 추가하였습니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommonBetweenGameAndDraw.h" />
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="MyDataType.h" />
