--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="MyDataType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CommonBetweenGameAndDraw.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
