--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="CommonBetweenGameAndDraw.cpp" />
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
