--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="wall.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="objloader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h">
@@ -63,6 +66,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Units.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjData.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="objloader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
