Drawing 파트와 Hidden Line Removal 파트를 구현했습니다.(Hidden Line removal은 맞는 구현인지 모르겠습니다. 그리고 Vertex 수를 알 수가 없어서 glDrawElements 안에를 비워 놓았습니다. 이거 클래스로 해서 예쁘게 처리해줘야 하나 고민됩니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="MyDataType.h" />
+    <ClInclude Include="myShader.h" />
     <ClInclude Include="ObjData.h" />
     <ClInclude Include="Objects.h" />
     <ClInclude Include="objloader.h" />
