--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="objloader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="myShader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
