Refactoring을 하였고, Build까지 되게 했습니다. Wall이 있던 파트를 과제에서 준 것으로 대체해야하기 때문에 일단 지웠는데 잘 돌아가는지 확인이 필요합니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -143,7 +143,9 @@
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="gen_VAO.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="myShader.cpp" />
     <ClCompile Include="Objects.cpp" />
     <ClCompile Include="objloader.cpp" />
     <ClCompile Include="player.cpp" />
@@ -154,6 +156,7 @@
     <ClInclude Include="CommonBetweenGameAndDraw.h" />
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="gen_VAO.h" />
     <ClInclude Include="MyDataType.h" />
     <ClInclude Include="myShader.h" />
     <ClInclude Include="ObjData.h" />
