캐릭터를 texture를 입히기 쉬운 고양이로 바꿀 예정입니다.(불러오는 파일만 바뀌고 다른 부분은 바뀔 일이 없습니다.) vertices, normal, uvs를 VBO에 넣도록 바꾸고 있습니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ball.cpp" />
+    <ClCompile Include="bmpddsloader.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="CommonBetweenGameAndDraw.cpp" />
@@ -152,6 +153,7 @@
     <ClCompile Include="wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bmpddsloader.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CommonBetweenGameAndDraw.h" />
     <ClInclude Include="Draw.h" />
