Texture 로드만 했고, 그려지지는 않습니다.(Fragment Shader를 손 봐야합니다.) 일단 런은 가능합니다.(왜 런이 되는지는 모르겠습니다.)

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -136,6 +136,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="addTexture.cpp" />
     <ClCompile Include="ball.cpp" />
     <ClCompile Include="bmpddsloader.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="addTexture.h" />
     <ClInclude Include="bmpddsloader.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CommonBetweenGameAndDraw.h" />
