--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="bmpddsloader.cpp">
       <Filter>소스 파일\DrawPart</Filter>
     </ClCompile>
+    <ClCompile Include="addTexture.cpp">
+      <Filter>소스 파일\DrawPart</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h">
@@ -105,6 +108,9 @@
       <Filter>헤더 파일\DrawPartHeader</Filter>
     </ClInclude>
     <ClInclude Include="bmpddsloader.h">
+      <Filter>헤더 파일\DrawPartHeader</Filter>
+    </ClInclude>
+    <ClInclude Include="addTexture.h">
       <Filter>헤더 파일\DrawPartHeader</Filter>
     </ClInclude>
   </ItemGroup>
