벽과 고양이의 텍스쳐가 그려지게 하였습니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -92,9 +92,6 @@
     <ClInclude Include="Camera.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="myShader.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="ObjData.h">
       <Filter>헤더 파일\DrawPartHeader</Filter>
     </ClInclude>
@@ -111,6 +108,9 @@
       <Filter>헤더 파일\DrawPartHeader</Filter>
     </ClInclude>
     <ClInclude Include="addTexture.h">
+      <Filter>헤더 파일\DrawPartHeader</Filter>
+    </ClInclude>
+    <ClInclude Include="myShader.h">
       <Filter>헤더 파일\DrawPartHeader</Filter>
     </ClInclude>
   </ItemGroup>
