ambient, diffuse f_att는 작동하는 걸 확인했습니다. Normal vector 계산과 Specular light를 해줘야 합니다. Normal texture의 위치를 vertex shader로 바꾸어줘야 할 거 같습니다.(model matrix 적용)

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Draw.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="gen_VAO.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="MyDataType.h" />
     <ClInclude Include="myShader.h" />
     <ClInclude Include="ObjData.h" />
