이제 미쿠가 나옵니다.

--- a/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
+++ b/GraphicsAssign1/GraphicsAssign1/GraphicsAssign1.vcxproj.filters
@@ -117,4 +117,7 @@
       <Filter>헤더 파일\DrawPartHeader</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
